sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: value unary_! is not a member of Int
  while (!i==taille-1) 
         ^